# SqlLiteClone

./: .gitignore  CMakeLists.txt  DataTable.cpp  DataTable.h  Dockerfile  Doxyfile  Makefile  README.md  Repl.h  SqlFrontend.cpp  SqlFrontend.h  conanfile.txt  docker-compose.yml  input.txt  main.cpp
docs/: _btree_8cpp.html  _btree_8cpp__incl.dot  _btree_8h.html  _btree_8h__dep__incl.dot  _btree_8h__incl.dot  _btree_8h_source.html  _cursor_8cpp.html  _cursor_8cpp__incl.dot  _cursor_8h.html  _cursor_8h__dep__incl.dot  _cursor_8h__incl.dot  _cursor_8h_source.html  _data_container_8cpp.html  _data_container_8cpp__incl.dot  _data_container_8h.html  _data_container_8h__dep__incl.dot  _data_container_8h__incl.dot  _data_container_8h_source.html  _data_row_8cpp.html  _data_row_8cpp__incl.dot  _data_row_8h.html  _data_row_8h__dep__incl.dot  _data_row_8h__incl.dot  _data_row_8h_source.html  _data_table_8cpp.html  _data_table_8cpp__incl.dot  _data_table_8h.html  _data_table_8h__dep__incl.dot  _data_table_8h__incl.dot  _data_table_8h_source.html  _i_o_buffer_8h.html  _i_o_buffer_8h__dep__incl.dot  _i_o_buffer_8h__incl.dot  _i_o_buffer_8h_source.html  _meta_data_store_8cpp.html  _meta_data_store_8cpp__incl.dot  _meta_data_store_8h.html  _meta_data_store_8h__dep__incl.dot  _meta_data_store_8h__incl.dot  _meta_data_store_8h_source.html  (+164 more)
docs/d0/d0f/: class_s_q_l_core_1_1_serializer-members.html
docs/d0/d1f/: _statement_8cpp__incl.dot
docs/d0/d2a/: _serializer_8h__incl.dot
docs/d0/d3c/: _sql_frontend_8h.html  _sql_frontend_8h_source.html
docs/d0/d8f/: _utils_8h__dep__incl.dot
docs/d0/dc5/: _meta_data_store_8cpp__incl.dot
docs/d0/dca/: class_s_q_l_interpreter_1_1_statement-members.html
docs/d0/dcf/: _serializer_8cpp.html
docs/d0/dd4/: _data_table_8cpp.html
docs/d1/d22/: _data_container_8cpp.html
docs/d1/d2b/: _serializer_8h__dep__incl.dot
docs/d1/d7c/: namespace_utils.html
docs/d2/d28/: namespace_db_core.html
docs/d2/d4a/: namespace_s_q_l_core.html  namespace_s_q_l_core_a532b3e6189c858f6edaf339e701ec064_cgraph.dot  namespace_s_q_l_core_a53def6bee2577512dd741b2ff87ca67d_cgraph.dot  namespace_s_q_l_core_a53def6bee2577512dd741b2ff87ca67d_icgraph.dot  namespace_s_q_l_core_a621db31ea2c4783aa0628ba8c6fceffc_icgraph.dot  namespace_s_q_l_core_a80d5365a6d2a1d9f0dcd11cbcf461552_icgraph.dot  namespace_s_q_l_core_a8b1ae14a9c783e44ddc244f27d8c107d_icgraph.dot  (+5 more)
docs/d3/d9e/: _data_row_8h.html  (+1 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  (+30 more)
html/: annotated.html  classes.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  pages.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+19 more)
latex/: _btree_8cpp.tex  _btree_8cpp.tex.tmp  _btree_8cpp__incl.dot  _btree_8h.tex  _btree_8h__dep__incl.dot  _btree_8h__incl.dot  _cursor_8cpp.tex  _cursor_8cpp.tex.tmp  _cursor_8cpp__incl.dot  _cursor_8h.tex  _cursor_8h__dep__incl.dot  _cursor_8h__incl.dot  _data_container_8cpp.tex  _data_container_8cpp__incl.dot  _data_container_8h.tex  _data_container_8h__dep__incl.dot  _data_container_8h__incl.dot  _data_row_8cpp.tex  _data_row_8cpp__incl.dot  _data_row_8h.tex  _data_row_8h__dep__incl.dot  _data_row_8h__incl.dot  _data_table_8cpp.tex  _data_table_8cpp__incl.dot  _data_table_8h.tex  _data_table_8h__dep__incl.dot  _data_table_8h__incl.dot  _i_o_buffer_8h.tex  _i_o_buffer_8h__dep__incl.dot  _i_o_buffer_8h__incl.dot  _meta_data_store_8cpp.tex  _meta_data_store_8cpp__incl.dot  _meta_data_store_8h.tex  _meta_data_store_8h__dep__incl.dot  _meta_data_store_8h__incl.dot  _page_8cpp.tex  _page_8cpp__incl.dot  _page_8h.tex  _page_8h__dep__incl.dot  _page_8h__incl.dot  (+100 more)
spec/: spec_helper.rb
sql_frontend/: CMakeLists.txt
src/: CMakeLists.txt  Config.cpp  Config.h  main.cpp
src/lib/: Btree.cpp  Btree.h  CMakeLists.txt  Cursor.cpp  Cursor.h  DataContainer.cpp  DataContainer.h  DataRow.cpp  DataRow.h  DataTable.cpp  DataTable.h  IOBuffer.h  MetaDataStore.cpp  MetaDataStore.h  Page.cpp  Page.h  Repl.cpp  Repl.h  Serializer.cpp  Serializer.h  SqlFrontend.cpp  SqlFrontend.h  Statement.cpp  Statement.h  Utils.cpp  Utils.h
src/lib/include/cereal-1.3.0/: CMakeLists.txt
src/lib/include/cereal-1.3.0/doc/: CMakeLists.txt
src/lib/include/cereal-1.3.0/unittests/: CMakeLists.txt  cmake-config-module.cmake  doctest.h
src/lib/include/cereal-1.3.0/unittests/boost/: CMakeLists.txt
src/lib/include/cereal-1.3.0/unittests/cpp17/: CMakeLists.txt
src/lib/sql_core_lib/: CMakeLists.txt  Cursor.cpp  Cursor.h  DataContainer.cpp  DataContainer.h  DataRow.h  DataTable.cpp  DataTable.h  MetaDataStore.cpp  MetaDataStore.h  Page.cpp  Page.h  Serializer.cpp  Serializer.h  Utils.cpp  Utils.h
src/lib/sql_interpreter/: CMakeLists.txt  Repl.cpp  Repl.h  SqlFrontend.cpp  SqlFrontend.h
src/lib/sql_interpreter_lib/: CMakeLists.txt  Repl.cpp  Repl.h  SqlFrontend.cpp  SqlFrontend.h  Statement.cpp  Statement.h
src/lib/wal_logger/: CMakeLists.txt  WalQueue.h
src/lib/wal_logger_lib/: CMakeLists.txt  WalQueue.cpp  WalQueue.h
(+283 files in other folders)
